Arreglo de bug al tener dos cartas iguales
Co-Authored-By: brusati <brusati@gitlab.com>
Co-Authored-By: julietamponti <julietamponti@gitlab.com>
Co-Authored-By: PMartn <PMartn@gitlab.com>
Co-Authored-By: LucasMontenegro1 <LucasMontenegro1@gitlab.com>