@@ -1,6 +1,7 @@
 package fiuba.tdd.tp.driver;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public enum DriverCardName {
@@ -34,7 +35,7 @@ public enum DriverCardName {
         Stream<DriverCardName> loopedArr = Stream
                 .iterate(0, i -> (i + 1) % arr.length)
                 .map(i -> arr[i]);
-        return Stream.concat(prefix, loopedArr).limit(count).toList();
+        return Stream.concat(prefix, loopedArr).limit(count).collect(Collectors.toList());
     }
 
     public static List<DriverCardName> loopedCardNames(int count) {
